--- a/doc/paper/plot.tex
+++ b/doc/paper/plot.tex
@@ -1,4 +1,4 @@
-% Created by tikzDevice version 0.12.6 on 2025-01-24 14:00:20
+% Created by tikzDevice version 0.12.6 on 2025-02-02 11:12:11
 % !TEX encoding = UTF-8 Unicode
 \documentclass[10pt]{article}
 \usepackage{tikz}
@@ -1171,7 +1171,7 @@
 \path[fill=fillColor] (142.55,126.48) rectangle (247.45,140.04);
 \definecolor{drawColor}{gray}{0.10}
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.72] at (195.00,130.78) {Friends};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.72] at (195.00,130.78) {Friends \& Smokers};
 \end{scope}
 \begin{scope}
 \path[clip] (251.95,126.48) rectangle (356.85,140.04);
