--- a/doc/paper/paper.bib
+++ b/doc/paper/paper.bib
@@ -303,3 +303,9 @@
   year            = {2021},
   doi             = {10.1007/978-3-030-97454-1_2}
 }
+@misc{oeis,
+  Author          = {{OEIS Foundation Inc.}},
+  Note            = {Published electronically at \url{http://oeis.org}},
+  Title           = {The {O}n-{L}ine {E}ncyclopedia of {I}nteger {S}equences},
+  Year            = 2025
+}
